<resources>
    <string name="app_name">Limbajul mimico-gestual</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Setări</string>
    <string name="error_message">Câmp incomplet/gol</string>
    <string name="error_password">Parola incorectă</string>
    <string name="learn">Învață</string>
    <string name="translate">Dicționar</string>
    <string name="games">Testeză-ți cunoștințele</string>
    <string name="alphabet">Alfabet</string>
    <string name="numbers">Numere</string>
    <string name="fruits">Fructe</string>
    <string name="vegetables">Legume</string>
    <string name="family">Familie</string>
    <string name="colors">Culori</string>
    <string name="emotions">Emoții</string>
    <string name="animals">Animale</string>
    <string name="places">Locuri</string>
    <string name="food">Mâncare</string>
    <string name="cities">Orașe</string>
    <string name="drinks">Băuturi</string>
    <string name="about">Despre aplicație</string>

    <string name="buttonUsor">Start quiz nivel incepator</string>
    <string name="buttonGreu">Start quiz nivel avansat</string>
    <string name="buttonAltQuiz">Start quiz nivel expresii</string>

    <string name="textUsor">Acest nivel conține quiz-uri din categoriile : alfabet și litere, mâncare, fructe, legume, culori, familie, locuri, băuturi.
    Alegeți categoria :
    </string>
    <string name="textGreu">Acest nivel conține întrebări din toate categoriile existente și expresiile din dicționar.</string>
    <string name="textAltQuiz">Acest nivel conține întrebări numai din expresii.</string>

    <string name="textPrezentare">Salut, numele meu este Ileana Daniela Gheorghe. Sunt studentă în anul III la Facultatea de Cibernetică, Statistică și Informatică Economică,
        specializarea Informatică Economică, și aceasta este lucrarea mea de licență.
    </string>
    <string name="textMotivatie">Am decis să creez o aplicație mobilă de tip m-learning, cu care scopul meu a fost să ajut la învățarea limbajului mimico-gestual cu o
        aplicație simplă și ușor de folosit de către toate persoanele.
    </string>
    <string name="textDezvoltare">Versiunea curentă a aplicației este într-o formă de bază și folosește limbajul semnelor pentru limba română.
    </string>
    <string name="textSursa">Pentru a vedea codul sursă puteți accesa: https://github.com/IleanaGheorghe/ASLapplication
    </string>
    <string name="textview">TextView</string>
</resources>
