<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log"
    android:orientation="vertical"
    tools:context="ro.ase.eu.aslapplication.AboutActivity">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="370dp"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="4dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAbout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:text="@string/about"
                android:textAlignment="center"
                android:textColor="@color/clickButton"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPrezentare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:text="@string/textPrezentare"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tvMotivatie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:text="@string/textMotivatie"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tvDezvoltare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:text="@string/textDezvoltare"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tvSursa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:text="@string/textSursa"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
    </android.support.v7.widget.CardView>
</LinearLayout>
